# renfe-cli

./: .gitignore  CAPTURA.md  CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  main.rs  models.rs  wizard.rs
src/api/: mod.rs  sale.rs  session.rs  stations.rs  telemetry.rs
src/commands/: buy.rs  mod.rs  profile.rs  search.rs  stations.rs  track.rs
src/config/: mod.rs
tools/: capture_renfe.py  open_checkout.py
