[package]
name = "renfe-cli"
version = "0.1.0"
edition = "2021"
description = "CLI no oficial para la API privada de venta.renfe.com: búsqueda, precios, plazas, viajes y telemetría, con salida --json para automatización."
license = "ISC"
rust-version = "1.75"

[[bin]]
name = "renfe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"
comfy-table = "7"

[profile.release]
strip = true
lto = true
opt-level = "z"
